--- a/src/app/reportes/reportes.component.html
+++ b/src/app/reportes/reportes.component.html
@@ -125,7 +125,7 @@
                               <th scope="col">Documentación</th>
                             </tr>
                           </thead>
-                          <tbody>
+                          <tbody hidden>
                             <tr>
                               <td>1</td>
                               <th>Marco Ruiz</th>
