--- a/src/app/proyectos/proyectos.component.html
+++ b/src/app/proyectos/proyectos.component.html
@@ -566,6 +566,11 @@
                                                     class="form-control ng-valid ng-dirty ng-touched" style="height: 120px;">
                                                 </textarea>
                                             </div>
+                                            <div class="mt-2">
+                                                <button  type="button" class="btn btn-primary">
+                                                    Guardar Notas
+                                                </button>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -581,10 +586,18 @@
                                     <h6  class="card-title">Observaciones Subdirección</h6>
                                     <div  class="row">
                                         <div  class="col-12">
-                                            <div  class="form-floating"><textarea 
+                                            <div  class="form-floating">
+                                                <textarea 
                                                     type="text" id="idDatasource" placeholder="ID" value="{{ observacionesSD }}"
-                                                    class="form-control ng-valid ng-dirty ng-touched"
-                                                    style="height: 120px;"></textarea></div>
+                                                    class="form-control ng-valid ng-dirty ng-touched" [(ngModel)]="observacionesSD"
+                                                    style="height: 120px;">
+                                                </textarea>
+                                            </div>
+                                        </div>
+                                        <div class="mt-2">
+                                            <button  type="button" class="btn btn-primary" (click)="guardarComentariosSD()">
+                                                Guardar Observaciones
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
@@ -594,7 +607,7 @@
                 </div>
             </div>
             <!--Botones Modal-->
-            <div  class="modal-footer">
+            <div  class="modal-footer" hidden>
                 <button  type="button" data-dismiss="modal" class="btn btn-secondary">
                     Cerrar
                 </button>
