--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,20 +44,22 @@
       <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
           <div class="card shadow-2-strong" style="border-radius: 1rem;">
-          <div class="card-body p-5">
+            <div class="card-body p-5">
+              <img src="../../assets/resources/img/bimlogo.png" class="mb-4" alt=""  width="100%" height="50%" >
               <div class="form-group mb-2">
-                  <label>Usuario</label>
-                  <input type="email" class="form-control"  [ngClass]="{'border-danger': bordeUsuario}" [(ngModel)]="usuarioLogin"  placeholder="Ingresa usuario valido">
-                  <p *ngIf="bordeUsuario" class="text-sm-center text-danger">Campo obligatorio</p>
-                  <p *ngIf="bordeUsuarioI" class="text-sm-center text-danger">Usuario inexistente</p>
+                <label>Usuario</label>
+                <input type="email" class="form-control"  [ngClass]="{'border-danger': bordeUsuario}" [(ngModel)]="usuarioLogin"  placeholder="Ingresa usuario valido">
+                <p *ngIf="bordeUsuario" class="text-sm-center text-danger">Campo obligatorio</p>
+                <p *ngIf="bordeUsuarioI" class="text-sm-center text-danger">Usuario inexistente</p>
               </div>
-              <div class="form-group ">
-                  <label for="exampleInputPassword1">Contraseña</label>
-                  <input type="password" class="form-control" [ngClass]="{'border-danger': bordePassword}" [ngClass]="{'border-danger': bordeUsuario}"  [(ngModel)]="passwordLogin" id="exampleInputPassword1" placeholder="Contraseña">
-                  <p *ngIf="bordePassword" class="text-sm-center text-danger">Campo obligatorio</p>
-                  <p *ngIf="bordePasswordM" class="text-sm-center text-danger">Password Incorrecta</p>
+              <div class="form-group flex-column">
+                <label for="exampleInputPassword1">Contraseña</label>
+                <input type="password" class="form-control" [ngClass]="{'border-danger': bordePassword}" [ngClass]="{'border-danger': bordeUsuario}"  [(ngModel)]="passwordLogin" id="exampleInputPassword1" placeholder="Contraseña">
+                <img src="../../assets/resources/img/ojo.png" class="mb-4 input-icon password" alt=""  width="6%" height="6%" hidden>
+                <p *ngIf="bordePassword" class="text-sm-center text-danger">Campo obligatorio</p>
+                <p *ngIf="bordePasswordM" class="text-sm-center text-danger">Password Incorrecta</p>
               </div>
-          </div>
+            </div>
           <div class="text-center mb-4">
               <button class="btn btn-primary btn-lg btn-block " (click)="IniciarSesion()"  type="submit">Iniciar Sesión</button>
           </div>
@@ -73,6 +75,23 @@
 <style>
   .negrita {
     font-weight: 700;
+  }
+  .input.password {
+  padding: 15px 35px 15px 15px;
+  }
+  .input-icon {
+    color: #191919;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 12px;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+
+  .input-icon.password {
+    left: unset;
+    right: 12px;
   }
 </style>
 
